--- a/dep/DHCP/kea-dhcp4.conf
+++ b/dep/DHCP/kea-dhcp4.conf
@@ -3,7 +3,7 @@
     // Configurações gerais do servidor DHCPv4
     "interfaces-config": {
       // Definição das interfaces de rede para operação do DHCP
-      "interfaces": ["gw375993", "vlan710", "vlan714", "vlan910"]
+      "interfaces": ["gw375993", "vlan710", "vlan714", "gw266884"]
     },
     "lease-database": {
       // Parâmetros do banco de dados para gerenciamento de leases
@@ -117,7 +117,7 @@
       {
         // Configurações da sub-rede 192.168.10.0/24
         "subnet": "192.168.10.0/24",
-        "interface": "vlan910",
+        "interface": "gw266884",
         "valid-lifetime": 43200,
         "pools": [
           {
