--- a/dep/DHCP/kea-dhcp4.conf
+++ b/dep/DHCP/kea-dhcp4.conf
@@ -14,6 +14,7 @@
     "subnet4": [
       {
         // Configurações da sub-rede 10.0.6.0/26
+        "id": 1,
         "subnet": "10.0.6.0/26",
         "interface": "gw375993",
         "valid-lifetime": 43200,
@@ -48,6 +49,7 @@
       },
       {
         // Configurações da sub-rede 172.16.10.0/24
+        "id": 2,
         "subnet": "172.16.10.0/24",
         "interface": "vlan710",
         "valid-lifetime": 604800,
@@ -78,10 +80,19 @@
             "name": "ntp-servers",
             "data": "10.0.6.62"
           }
+        ],
+        "reservations": [
+          {
+            // SRV59978
+            "hw-address": "ac:22:0b:2e:2b:f7",
+            "ip-address": "172.16.10.2",
+            "hostname": "srv59978"
+          }
         ]
       },
       {
         // Configurações da sub-rede 172.16.14.0/24
+        "id": 3,
         "subnet": "172.16.14.0/24",
         "interface": "vlan714",
         "valid-lifetime": 604800,
@@ -116,6 +127,7 @@
       },
       {
         // Configurações da sub-rede 192.168.10.0/24
+        "id": 4,
         "subnet": "192.168.10.0/24",
         "interface": "gw266884",
         "valid-lifetime": 43200,
@@ -150,9 +162,9 @@
         "reservations": [
           {
             // Reservas de endereços IP para dispositivos específicos
-            "hw-address": "18:a5:9c:b1:44:5d",
+            "hw-address": "dc:a2:66:91:73:95",
             "ip-address": "192.168.10.26",
-            "hostname": "dk240584"
+            "hostname": "nb367095"
           }
         ]
       }
