--- a/dep/systemd/trigger.service
+++ b/dep/systemd/trigger.service
@@ -1,13 +1,13 @@
-[Unit]
-Description=The beginning
+ [Service]
+ Type=oneshot
+ ExecStartPre=/bin/sleep 10
+ EnvironmentFile=/etc/environment
+ ExecStart=/root/.services/main.sh
+ RemainAfterExit=true
+ Restart=on-failure
+ RestartSec=5s
+ StandardOutput=journal
+ StandardError=journal
 
-[Service]
-ExecStartPre=/bin/sleep 10
-Type=oneshot
-ExecStart=/root/.services/main.sh
-RemainAfterExit=true
-Restart=on-failure
-RestartSec=5s
-
-[Install]
-WantedBy=multi-user.target
+ [Install]
+ WantedBy=multi-user.target
