--- a/dep/DHCP/kea-dhcp4.conf
+++ b/dep/DHCP/kea-dhcp4.conf
@@ -13,8 +13,51 @@
     },
     "subnet4": [
       {
-        // Configurações da sub-rede 172.16.10.0/24
+        // Configurações da sub-rede 10.0.4.0/28
         "id": 1,
+        "subnet": "10.0.4.0/28",
+        "interface": "gw099324",
+        "valid-lifetime": 604800,
+        "pools": [
+          {
+            // Faixa de endereços IP para alocação dinâmica
+            "pool": "10.0.4.1 - 10.0.4.13"
+          }
+        ],
+        "option-data": [
+          {
+            // Configuração do gateway padrão
+            "name": "routers",
+            "data": "10.0.4.14"
+          },
+          {
+            // Configuração dos servidores DNS
+            "name": "domain-name-servers",
+            "data": "10.0.6.1"
+          },
+          {
+            // Configuração do domínio padrão
+            "name": "domain-name",
+            "data": "pine.local.br"
+          },
+          {
+            // Configuração dos servidores NTP
+            "name": "ntp-servers",
+            "data": "10.0.6.1"
+          }
+        ],
+        "reservations": [
+          {
+            // SRV59978
+            "hw-address": "ac:22:0b:2e:2b:f7",
+            "ip-address": "172.16.10.2",
+            "hostname": "srv59978"
+          }
+        ]
+      },
+      {
+        // Configurações da sub-rede 172.16.10.0/24
+        "id": 2,
         "subnet": "172.16.10.0/24",
         "interface": "vlan710",
         "valid-lifetime": 604800,
@@ -57,7 +100,7 @@
       },
       {
         // Configurações da sub-rede 172.16.14.0/24
-        "id": 2,
+        "id": 3,
         "subnet": "172.16.14.0/24",
         "interface": "vlan714",
         "valid-lifetime": 604800,
@@ -92,7 +135,7 @@
       },
       {
         // Configurações da sub-rede 192.168.10.0/24
-        "id": 3,
+        "id": 4,
         "subnet": "192.168.10.0/24",
         "interface": "vlan910",
         "valid-lifetime": 43200,
