--- a/dep/DHCP/kea-dhcp4.conf
+++ b/dep/DHCP/kea-dhcp4.conf
@@ -3,7 +3,7 @@
     // Configurações gerais do servidor DHCPv4
     "interfaces-config": {
       // Definição das interfaces de rede para operação do DHCP
-      "interfaces": ["vlan710", "vlan714", "vlan910"]
+      "interfaces": ["gw099324", "vlan710", "vlan714", "vlan910"]
     },
     "lease-database": {
       // Parâmetros do banco de dados para gerenciamento de leases
@@ -44,14 +44,6 @@
             // Configuração dos servidores NTP
             "name": "ntp-servers",
             "data": "10.0.6.1"
-          }
-        ],
-        "reservations": [
-          {
-            // SRV59978
-            "hw-address": "ac:22:0b:2e:2b:f7",
-            "ip-address": "172.16.10.2",
-            "hostname": "srv59978"
           }
         ]
       },
