--- a/dep/DHCP/kea-dhcp4.conf
+++ b/dep/DHCP/kea-dhcp4.conf
@@ -167,6 +167,31 @@
             "hostname": "nb367095"
           }
         ]
+      },
+      {
+        // Configurações da sub-rede 192.168.22.0/24
+        "id": 5,
+        "subnet": "192.168.22.0/24",
+        "interface": "vlan922",
+        "valid-lifetime": 43200,
+        "pools": [
+          {
+            // Faixa de endereços IP para alocação dinâmica
+            "pool": "192.168.22.1 - 192.168.22.253"
+          }
+        ],
+        "option-data": [
+          {
+            // Configuração do gateway padrão
+            "name": "routers",
+            "data": "192.168.22.254"
+          },
+          {
+            // Configuração dos servidores NTP
+            "name": "ntp-servers",
+            "data": "10.0.6.1"
+          }
+        ]
       }
     ],
     "loggers": [
