--- a/dep/DHCP/kea-dhcp4.conf
+++ b/dep/DHCP/kea-dhcp4.conf
@@ -187,6 +187,16 @@
             "data": "192.168.22.254"
           },
           {
+            // Configuração dos servidores DNS
+            "name": "domain-name-servers",
+            "data": "10.0.6.1"
+          },
+          {
+            // Configuração do domínio padrão
+            "name": "domain-name",
+            "data": "pine.local.br"
+          },
+          {
             // Configuração dos servidores NTP
             "name": "ntp-servers",
             "data": "10.0.6.1"
