--- a/dep/DHCP/kea-dhcp4.conf
+++ b/dep/DHCP/kea-dhcp4.conf
@@ -3,7 +3,7 @@
     // Configurações gerais do servidor DHCPv4
     "interfaces-config": {
       // Definição das interfaces de rede para operação do DHCP
-      "interfaces": ["gw099324", "vlan710", "vlan714", "vlan910", "vlan922"]
+      "interfaces": ["vlan710", "vlan714", "vlan910", "vlan922"]
     },
     "lease-database": {
       // Parâmetros do banco de dados para gerenciamento de leases
